# api/generated/api/swagger.yaml
@@ -10,6 +10,23 @@ paths:
       tags:
       - projects
       summary: Lists all projects
+      parameters:
+      - name: length
+        in: query
+        description: Pagination length
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: integer
+      - name: offser
+        in: query
+        description: Pagination offset
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: integer
       responses:
         "200":
           description: Successful response
@@ -19,7 +36,6 @@ paths:
                 $ref: '#/components/schemas/inline_response_200'
         "500":
           description: Internal server error
-  /project:
     post:
       tags:
       - projects
@@ -231,7 +247,11 @@ components:
           description: List of project
           items:
             $ref: '#/components/schemas/ProjectResponse'
+        hits:
+          type: integer
+          description: Total hits for pagination
       example:
+        hits: 6
         projects:
         - uid: 046b6c7f-0b8a-43b9-b35d-6489e6daee91
           participant_ids:
